# NLPToolkitPlus

./: .gitignore  README.md  Readme.md  _version.py  pyproject.toml
lightchain/cfg/embeddings/: documents.yaml
lightchain/connector/: __init__.py
lightchain/connector/sql/: __init__.py  base.py  create.py  tables.py
lightchain/examples/gpt2/: GPT2_Model_Tutorial.md  README.md  tutorial.py  visualize.py
lightchain/examples/text_to_sql/: tutorial.py
lightchain/models/: __init__.py  causal.py
lightchain/models/decoder/gpt2/: __init__.py  activation.py  attention.py  config.py  utils.py
lightchain/models/encoder/: __init__.py
lightchain/models/encoder/sentence/: __init__.py  mpnet.py
lightchain/models/sentence/: base.py
lightchain/models/sentence/pooling/: base.py
lightchain/modules/: __init__.py
lightchain/modules/agent/sql/: __init__.py  base.py
lightchain/modules/chain/: __init__.py
lightchain/modules/chain/sql/: explanation.py  query.py
lightchain/modules/loader/: __init__.py
lightchain/modules/loader/text/: __init__.py  character.py  chunks.py
lightchain/utils/: __init__.py  seed.py  serialization.py
lightchain/utils/io/: __init__.py
lightchain/utils/io/reader/: __init__.py  files.py  format.py
nltkp/cfg/: __init__.py
nltkp/cfg/dataset/: base.yaml
nltkp/cfg/embeddings/: documents.yaml
nltkp/cfg/rag/: __init__.py
nltkp/cfg/rag/embeddings/: __init__.py  base.yaml  config.py
nltkp/cfg/rag/generation/: __init__.py  config.py  phi3_instruct.yaml  tiny_llama.yaml
nltkp/cfg/rag/ranking/: __init__.py  config.py  mmr.yaml
nltkp/cfg/rag/retrieval/: __init__.py  config.py  faiss.yaml
nltkp/connector/sql/: base.py  create.py  tables.py
nltkp/examples/text_to_sql/: tutorial.py
nltkp/factory/: __init__.py
nltkp/factory/chain/: __init__.py  runnable.py
nltkp/factory/loader/: __init__.py  base.py  modular.py  utils.py
nltkp/factory/loader/documents/: __init__.py  base.py  hierarchical.py
nltkp/models/: __init__.py  utils.py
nltkp/models/chat/: __init__.py  base.py  postprocess.py  preprocess.py
nltkp/models/decoder/: __init__.py
nltkp/models/decoder/gpt2/: activation.py  block.py  config.py  conv.py  load.py  mlp.py  model.py
nltkp/models/decoder/phi3/: __init__.py  attention.py  block.py  causal.py  embedding.py  mlp.py  model.py  sample.py  utils.py
nltkp/models/sentence/: __init__.py  base.py
nltkp/models/sentence/pooling/: __init__.py  base.py  func.py
nltkp/modules/: __init__.py
nltkp/modules/agent/: __init__.py
nltkp/modules/agent/sql/: base.py
nltkp/modules/chain/sql/: __init__.py  (+3 more)
nltkp/modules/embeddings/: __init__.py  load.py
nltkp/modules/generation/: __init__.py  params.py  utils.py
nltkp/modules/indices/: __init__.py  base.py
nltkp/modules/message/: __init__.py  system_handler.py
nltkp/modules/rag/: __init__.py
nltkp/modules/reader/: __init__.py  utils.py
nltkp/utils/: __init__.py  cuda.py  path.py  serialization.py
resources/database/: data.db
scripts/: faiss.py
tests/chain/sql/: test_sql_query_chain.py
(+49 files in other folders)
