[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nltkp"
version = "0.1.0"
description = "nltkp"
authors = [{ name = "Roni Reznik", email = "roni.reznik@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
]

dependencies = [
    "accelerate==0.31.0",
    "matplotlib==3.9.0",
    "openai==1.27.0",
    "pandas==1.5.3",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.30",
    "seaborn==0.13.2",
    "transformers==4.41.0",
    "torch==2.3.0",
    "tqdm==4.66.4"
]

[project.optional-dependencies]
faiss-cpu = ["faiss-cpu>=1.7.1"]
faiss-gpu = ["faiss-gpu>=1.7.1"]
dev = [
    "pytest",
    "mypy",
    "flake8",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true  # tried both true and false

[tool.setuptools.packages.find]
where = ["."]
include = ["nltkp*"]
exclude = ["resources*", "scripts*"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]
