[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nltkp"
version = "0.1.0"
description = "nltkp"
authors = [{ name = "Roni Reznik", email = "roni.reznik@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
]

dependencies = [
    "accelerate==0.31.0",
    "bitsandbytes=="0.43.2",
    "faiss-cpu==1.8.0.post1",
    "flash-attn==2.6.2",
    "langchain-text-splitters==0.2.2",
    "matplotlib==3.9.0",
    "numpy==1.26.4",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "scikit-learn==1.5.1,
    "SQLAlchemy==2.0.30",
    "seaborn==0.13.2",
    "transformers==4.41.0",
    "torch==2.3.0",
    "tqdm==4.66.4"
]

[project.optional-dependencies]
faiss-cpu = ["faiss-cpu>=1.7.1"]
faiss-gpu = ["faiss-gpu>=1.7.1"]
dev = [
    "pytest",
    "flake8",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true  # tried both true and false

[tool.setuptools.packages.find]
where = ["."]
include = ["nltkp*"]
exclude = ["resources*", "scripts*"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY001"]

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]
